docs(routes): add tacks route dapi docs and modify validation
